<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidStudy</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="fragmentoneactivityname">Fragment #1</string>
    <string name="mainlist">Fragment &amp; ActionBar</string>
    <string name="fragmentportrait">Fragment : Portrait</string>
    <string name="fragmentlandscape">Fragment : Landscape</string>
    <string name="fragmentmaintwo">FragmentTwo</string>
    <string name="fragmentapp">FragmentList</string>
    <string name="backstackfragment">FragmentBackStack</string>
    <string name="handsetfragment">Fragment HandSet</string>
    <string name="finishactivity">액티비티 종료</string>

</resources>